if ((${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang" AND ${CMAKE_CXX_COMPILER_VERSION} VERSION_LESS "13") OR
    (${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU" AND ${CMAKE_CXX_COMPILER_VERSION} VERSION_LESS "9.1"))
  set(_std_cxx_filesystem_lib "stdc++fs")
endif()

add_executable(test_nopayloadclient test_nopayloadclient.cpp)
add_executable(test_backend test_backend.cpp)
add_executable(test_plmover test_plmover.cpp)
add_executable(test_get test_get.cpp)
add_executable(test_config test_config.cpp)
target_link_libraries(test_nopayloadclient nopayloadclient ${_std_cxx_filesystem_lib})
target_link_libraries(test_backend nopayloadclient ${_std_cxx_filesystem_lib})
target_link_libraries(test_plmover nopayloadclient ${_std_cxx_filesystem_lib})
target_link_libraries(test_get nopayloadclient ${_std_cxx_filesystem_lib})
target_link_libraries(test_config nopayloadclient ${_std_cxx_filesystem_lib})
target_include_directories(test_nopayloadclient PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_include_directories(test_backend PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_include_directories(test_plmover PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_include_directories(test_get PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_include_directories(test_config PRIVATE ${CMAKE_SOURCE_DIR}/include)

#add_test(NAME test_nopayloadclient COMMAND ./test_nopayloadclient)
#add_test(NAME test_backend COMMAND ./test_backend)
#add_test(NAME test_plmover COMMAND ./test_plmover)
add_test(NAME test_get COMMAND ./test_get)
#add_test(NAME test_config COMMAND ./test_config)
